--- a/src/content/p/why-electric-cars-cant-look-like-electric-cars.mdx
+++ b/src/content/p/why-electric-cars-cant-look-like-electric-cars.mdx
@@ -22,7 +22,7 @@ tags:
   - progress
   - 'systemic-critique'
 draft: false
-featured: true
+featured: false
 published: true
 showComments: true
 ---
